--- a/_sass/components/_extensions.scss
+++ b/_sass/components/_extensions.scss
@@ -26,7 +26,7 @@
 
 .extensions--demo {
   min-height: 340px;
-  padding-top: percentage(scut-strip-unit(calc(315 / 560)));
+  padding-top: percentage(315 / 560);
 }
 
 .extensions--audio {
