Updating style-sheet

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,7 @@
     "skins/{{ site.text_skin | default: site.data.variables.default.text_skin }}",
     // "skins/chocolate",
     // "skins/dark",
+    // "skins/dark_UoS",
     // "skins/default",
     // "skins/forest",
     // "skins/ocean",
