Personal home-page

--- a/docs/_layouts/archive.html
+++ b/docs/_layouts/archive.html
@@ -1,13 +1,6 @@
 ---
 layout: page
-titles:
-  # @start locale config
-  en      : &EN       Archive
-  en-GB   : *EN
-  en-US   : *EN
-  en-CA   : *EN
-  en-AU   : *EN
-  # @end locale config
+title: Archive
 ---
 
 <div class="layout--archive js-all">
