--- a/docs/_includes/head/favicon.html
+++ b/docs/_includes/head/favicon.html
@@ -1,4 +1,7 @@
-<!-- start favicons snippet, use https://realfavicongenerator.net/ -->
+
+
+<!-- start favicons snippet, use https://realfavicongenerator.net/ 
+
 {%- include snippets/prepend-baseurl.html path='/assets/apple-touch-icon.png' -%}
 <link rel="apple-touch-icon" sizes="180x180" href="{{ __return }}">
 
@@ -22,5 +25,31 @@
 {%- include snippets/prepend-baseurl.html path='/assets/browserconfig.xml' -%}
 <meta name="msapplication-config" content="{{ __return }}">
 
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="#ffffff">-->
+
+{%- include snippets/prepend-baseurl.html path='/assets/logos/apple-touch-icon.png' -%}
+<link rel="apple-touch-icon" sizes="180x180" href="{{ __return }}">
+
+{%- include snippets/prepend-baseurl.html path='/assets/logos/favicon-32x32.png' -%}
+<link rel="icon" type="image/png" sizes="32x32" href="{{ __return }}">
+
+{%- include snippets/prepend-baseurl.html path='/assets/logos/favicon-16x16.png' -%}
+<link rel="icon" type="image/png" sizes="16x16" href="{{ __return }}">
+
+{%- include snippets/prepend-baseurl.html path='/assets/logos/site.webmanifest' -%}
+<link rel="manifest" href="{{ __return }}">
+
+{%- include snippets/prepend-baseurl.html path='/assets/logos/safari-pinned-tab.svg' -%}
+<link rel="mask-icon" href="{{ __return }}" color="#212529">
+
+{%- include snippets/prepend-baseurl.html path='/assets/logos/favicon.ico' -%}
+<link rel="shortcut icon" href="{{ __return }}">
+
+<meta name="msapplication-TileColor" content="#212529">
+
+{%- include snippets/prepend-baseurl.html path='/assets/logos/browserconfig.xml' -%}
+<meta name="msapplication-config" content="{{ __return }}">
+
+<meta name="theme-color" content="#212529">
+
 <!-- end favicons snippet -->
