Minimum viable product

--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -20,6 +20,7 @@
     // "skins/highlight/tomorrow-night-blue",
     // "skins/highlight/tomorrow-night-bright",
 
+    "common/classes/flexbox",
 
     "common/variables",
     "common/function",
